--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=java-rabbitmq-redis-test
 
 # 数据库连接配置
-spring.datasource.url=jdbc:mysql://localhost:3306/myTest?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.29.160.1:3306/myTest?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,12 +14,12 @@ mybatis-plus.type-aliases-package=priv.acan.javarabbitmqredistest.entity
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # RabbitMQ 配置
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=172.29.160.1
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Redis 配置
-spring.data.redis.host=localhost
+spring.data.redis.host=172.29.160.1
 spring.data.redis.port=6379
 spring.data.redis.password=
